// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - TasksList When there are tasks renders correctly 1`] = `
<main
  className="MuiBox-root MuiBox-root-2"
  data-testid="task-list-page"
>
  <NavBar
    type="menu"
  />
  <AppBar
    color="inherit"
    component="section"
    position="static"
  >
    <AvatarHeader />
    <Tabs
      indicatorColor="primary"
      onChange={[Function]}
      textColor="primary"
      value={0}
      variant="fullWidth"
    >
      <Tab
        label="Newbie Tasks"
      />
      <Tab
        label="My tasks"
      />
    </Tabs>
  </AppBar>
  <TabPanel
    index={0}
    value={0}
  >
    <TaskTabsContent
      loading={true}
      onChange={[Function]}
      tabIndex={0}
    />
  </TabPanel>
  <TabPanel
    index={1}
    value={0}
  >
    <TaskTabsContent
      loading={true}
      onChange={[Function]}
      tabIndex={0}
    />
  </TabPanel>
  <a
    aria-disabled={false}
    aria-label="add"
    className="MuiButtonBase-root MuiFab-root makeStyles-button-3 MuiFab-sizeMedium MuiFab-primary"
    href="/buddy/newbies/1234/add-task"
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
    title="Add new task"
  >
    <span
      className="MuiFab-label"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
    </span>
  </a>
</main>
`;

exports[`Component - TasksList When there are tasks renders correctly 2`] = `
<main
  className="MuiBox-root MuiBox-root-2"
  data-testid="task-list-page"
>
  <NavBar
    type="menu"
  />
  <AppBar
    color="inherit"
    component="section"
    position="static"
  >
    <AvatarHeader />
    <Tabs
      indicatorColor="primary"
      onChange={[Function]}
      textColor="primary"
      value={0}
      variant="fullWidth"
    >
      <Tab
        label="Newbie Tasks"
      />
      <Tab
        label="My tasks"
      />
    </Tabs>
  </AppBar>
  <TabPanel
    index={0}
    value={0}
  >
    <TaskTabsContent
      loading={false}
      onChange={[Function]}
      tabIndex={0}
      tasks={
        Array [
          Object {
            "description": "New task description",
            "id": "3",
            "status": "COMPLETED",
            "title": "New task title ",
          },
          Object {
            "description": "New task description 2",
            "id": "4",
            "status": "COMPLETED",
            "title": "New task title 2",
          },
        ]
      }
    />
  </TabPanel>
  <TabPanel
    index={1}
    value={0}
  >
    <TaskTabsContent
      loading={false}
      onChange={[Function]}
      tabIndex={0}
      tasks={
        Array [
          Object {
            "description": "New task description",
            "id": "1",
            "status": "UNCOMPLETED",
            "title": "New task title ",
          },
          Object {
            "description": "New task description 2",
            "id": "2",
            "status": "COMPLETED",
            "title": "New task title 2",
          },
        ]
      }
    />
  </TabPanel>
  <a
    aria-disabled={false}
    aria-label="add"
    className="MuiButtonBase-root MuiFab-root makeStyles-button-3 MuiFab-sizeMedium MuiFab-primary"
    href="/buddy/newbies/1234/add-task"
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
    title="Add new task"
  >
    <span
      className="MuiFab-label"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </a>
</main>
`;

exports[`Component - TasksList when there are not tasks should render empty state 1`] = `
<main
  className="MuiBox-root MuiBox-root-36"
  data-testid="task-list-page"
>
  <NavBar
    type="menu"
  />
  <AppBar
    color="inherit"
    component="section"
    position="static"
  >
    <AvatarHeader />
    <Tabs
      indicatorColor="primary"
      onChange={[Function]}
      textColor="primary"
      value={0}
      variant="fullWidth"
    >
      <Tab
        label="Newbie Tasks"
      />
      <Tab
        label="My tasks"
      />
    </Tabs>
  </AppBar>
  <TabPanel
    index={0}
    value={0}
  >
    <TaskTabsContent
      loading={false}
      onChange={[Function]}
      tabIndex={0}
      tasks={Array []}
    />
  </TabPanel>
  <TabPanel
    index={1}
    value={0}
  >
    <TaskTabsContent
      loading={false}
      onChange={[Function]}
      tabIndex={0}
      tasks={Array []}
    />
  </TabPanel>
  <a
    aria-disabled={false}
    aria-label="add"
    className="MuiButtonBase-root MuiFab-root makeStyles-button-3 MuiFab-sizeMedium MuiFab-primary"
    href="/buddy/newbies/1234/add-task"
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
    title="Add new task"
  >
    <span
      className="MuiFab-label"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </a>
</main>
`;
